apps/kiali-operator/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kiali-operator-policy
  namespace: kiali-operator
spec:
  selector:
    matchLabels:
      app: kiali
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          values:
            - "46.7.164.99" # Analect
            - "187.56.61.31" #Grizko
            - "179.191.119.178" #DiOculos
